h1 line is added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1> Hello Git Hub</h1>
-</body>
+
+    <H1>Successfully Pushed the file to the git hub</H1>
+</body> 
 </html>
