footer is added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1> Hello Git Hub</h1>
     <h1> successfully added new branch called main</h1>
+
+    <footer> this is Design to Nagesh Tatuskar In @2025 </footer>
 </body> 
 </html>
